# spatial_temporal_learning

./: .travis.yml  README.md
persistent_object_search/: CMakeLists.txt  package.xml
persistent_object_search/nodes/: offline_object_search.cpp
spatial_temporal_learning/: package.xml
world_item_observer/: CMakeLists.txt  package.xml
world_item_observer/include/world_item_observer/: CarlAutoObserver.h
world_item_observer/nodes/: carl_auto_observer.cpp
world_item_observer/src/: CarlAutoObserver.cpp  ItemObserver.cpp
world_item_search/: CMakeLists.txt  package.xml
world_item_search/geolife/: download.bash
world_item_search/include/world_item_search/: OfflineItemSearcher.h
world_item_search/launch/: offline_item_search.launch
world_item_search/nodes/: offline_item_search.cpp
world_item_search/src/: OfflineItemSearcher.cpp
worldlib/: CMakeLists.txt  package.xml
worldlib/include/worldlib/: worldlib.h
worldlib/include/worldlib/geometry/: Orientation.h
worldlib/include/worldlib/model/: PersistenceModel.h  PlacementModel.h  TaskModel.h
worldlib/include/worldlib/remote/: Client.h  HttpClient.h  InteractiveWorldModelClient.h  Node.h  SpatialWorldClient.h  SqlClient.h
worldlib/include/worldlib/sql/: Client.h  SpatialWorldClient.h
worldlib/include/worldlib/world/: Object.h  Observation.h  PlacementSurface.h  Room.h  Surface.h  World.h
worldlib/src/: test.cpp
worldlib/src/geometry/: Orientation.cpp
worldlib/src/model/: PersistenceModel.cpp  PlacementModel.cpp  TaskModel.cpp
worldlib/src/remote/: HttpClient.cpp  InteractiveWorldModelClient.cpp  Node.cpp  SpatialWorldClient.cpp  SqlClient.cpp
worldlib/src/sql/: Client.cpp  SpatialWorldClient.cpp
worldlib/src/world/: Object.cpp  PlacementSurface.cpp  Room.cpp  Surface.cpp  World.cpp
